--- a/appointments.html
+++ b/appointments.html
@@ -233,10 +233,10 @@
 											<img src="assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3>Dr. Darren Elder</h3>
+											<h3>Dr.S.K Madhukar</h3>
 											
 											<div class="patient-details">
-												<h5 class="mb-0">BDS, MDS - Oral & Maxillofacial Surgery</h5>
+												<h5 class="mb-0">Physician</h5>
 											</div>
 										</div>
 									</div>
@@ -451,7 +451,7 @@
 											<img src="assets/img/patients/patient4.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Suman Rani</a></h3>
+											<h3><a href="patient-profile.html">Anupam Kumar Singh</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 9 Nov 2019, 1.00 PM</h5>
 												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
@@ -541,7 +541,7 @@
 											<img src="assets/img/patients/patient7.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Nitesh Singh</a></h3>
+											<h3><a href="patient-profile.html">Swati Ray</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 5 Nov 2019, 12.00 PM</h5>
 												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
