--- a/diagnostics-all.html
+++ b/diagnostics-all.html
@@ -166,7 +166,7 @@
 							</div>
 							<div class="header-contact-detail">
 								<p class="contact-header">Contact</p>
-								<p class="contact-info-header"> +1 315 369 5943</p>
+								<p class="contact-info-header"> +919955871746</p>
 							</div>
 						</li>
 						<li class="nav-item">
@@ -270,7 +270,7 @@
 							<div class="row align-items-center pb-3">	
 								<div class="col-md-4 col-12 d-md-block d-none custom-short-by">
 									<h3 class="title pharmacy-title">Medlife Medical</h3>
-									<p class="doc-location mb-2 text-ellipse pharmacy-location"><i class="fas fa-map-marker-alt mr-1"></i> 96 Red Hawk Road Cyrus, MN 56323 </p>
+									<p class="doc-location mb-2 text-ellipse pharmacy-location"><i class="fas fa-map-marker-alt mr-1"></i> BagDulhan Road,Opposite Development of Mathematics,BaghDulhan ,Hajipur,Bihar,844101 </p>
 									<span class="sort-title">Showing 6 of 98 products</span>
 								</div>
 								<div class="col-md-8 col-12 d-md-block d-none custom-short-by">
