--- a/doctors.html
+++ b/doctors.html
@@ -72,7 +72,7 @@
 							<li class="has-submenu">
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="doctor-dashboard.html">Doctor Dashboard</a></li>
+									<li class="active" ><a href="doctor.html">Doctor </a></li>
 									<li><a href="appointments.html">Appointments</a></li>
 									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
@@ -95,14 +95,14 @@
 							<li class="has-submenu active">
 								<a href="">Patients <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li class="has-submenu">
+									<!--<li class="has-submenu">
 										<a href="#">Doctors</a>
 										<ul class="submenu">
 											<li><a href="map-grid.html">Map Grid</a></li>
 											<li><a href="map-list.html">Map List</a></li>
 										</ul>
-									</li>
-									<li class="active"><a href="search.html">Search Doctor</a></li>
+									</li>-->
+									<li ><a href="search.html">Search Doctor</a></li>
 									<li><a href="doctor-profile.html">Doctor Profile</a></li>
 									<li><a href="booking.html">Booking</a></li>
 									<li><a href="checkout.html">Checkout</a></li>
