--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="doctors.html">Doctors</a></li>
-									<li><a href="booking.html">Appointments</a></li>
+									<li><a href="appointments.html">Appointments</a></li>
 									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
 									<li><a href="patient-profile.html">Patients Profile</a></li>
