--- a/pharmacy-index.html
+++ b/pharmacy-index.html
@@ -262,7 +262,7 @@
 						<div class="col-md-9 m-auto">
 							<div class="section-header text-center">
 								<h2>What are you looking for?</h2>
-								<p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<!--<p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>-->
 							</div>
 							<div class="row">
 								<div class="col-lg-4 mb-3">
@@ -309,7 +309,8 @@
 				<div class="container-fluid">
 					<div class="section-header text-center">
 						<h2>Clinic and Specialities</h2>
-						<p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<!--<p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>-->
+						<p>Visit our Speciality Services</p>
 					</div>
 					<div class="row justify-content-center">
 						<div class="col-md-9">
