--- a/pharmacy-index.html
+++ b/pharmacy-index.html
@@ -795,7 +795,8 @@
 						<div class="col-md-7">
 							<div class="section-header">	
 								<h2 class="mt-2">Availabe Features in Our Clinic</h2>
-								<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+								<!--<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>-->
+								<p>All necessary patient/participant consent has been obtained and the appropriate institutional forms have been archived.</p>
 							</div>	
 							<div class="features-slider slider">
 								<!-- Slider Item -->
