--- a/pharmacy-index.html
+++ b/pharmacy-index.html
@@ -390,7 +390,8 @@
 								<!--<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum.</p>-->
 								<!--<p>web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes</p></p>-->
 								<p>Doctors! Make it easier for patients to reach you. Doctor Khojo helps you to find the best doctors near to your location, book appointment with best doctors, clinics, hospitals & diagnostic centers in India.</p>
-								<p>If you do a class like yoga or pilates, simply let your instructor know so they can adapt.  </p>
+								<p>If you do a class like yoga or pilates, simply let your instructor know so they can adapt.These are experts on hormones and metabolism. They can treat conditions like diabetes, thyroid problems,
+									infertility, and calcium and bone disorders. </p>
 								<a href="javascript:;">Read More..</a>
 							</div>
 						</div>
