bppking-success.html

--- a/booking-success.html
+++ b/booking-success.html
@@ -63,7 +63,7 @@
 							<li class="has-submenu">
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="doctor-dashboard.html">Doctor Dashboard</a></li>
+									<li><a href="doctor.html">Doctor </a></li>
 									<li><a href="appointments.html">Appointments</a></li>
 									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
@@ -97,7 +97,7 @@
 									<li><a href="doctor-profile.html">Doctor Profile</a></li>
 									<li><a href="booking.html">Booking</a></li>
 									<li><a href="checkout.html">Checkout</a></li>
-									<li><a href="booking-success.html">Booking Success</a></li>
+									<li class="active"><a href="booking-success.html">Booking Success</a></li>
 									<li><a href="patient-dashboard.html">Patient Dashboard</a></li>
 									<li><a href="favourites.html">Favourites</a></li>
 									<!--<li><a href="chat.html">Chat</a></li>
@@ -118,7 +118,8 @@
 									<!--<li><a href="payment-success.html">Payment Success</a></li>-->
 								</ul>
 							</li>	
-							<li clas<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
+							<li class="has-submenu">
+								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="dignostics-index.html">Diagnostics</a></li>
 									<li><a href="lab-search.html">Lab Search</a></li>
