pharmacy-index.html

--- a/pharmacy-index.html
+++ b/pharmacy-index.html
@@ -63,7 +63,7 @@
 							<li class="has-submenu">
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="doctor.html">Doctor </a></li>
+									<li><a href="doctors.html">Doctor </a></li>
 									<li><a href="appointments.html">Appointments</a></li>
 									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
@@ -87,11 +87,11 @@
 								<a href="">Patients <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li class="has-submenu">
-										<a href="#">Doctors</a>
-										<ul class="submenu">
+										<!--<a href="#">Doctors</a>
+										 <ul class="submenu">
 											<li><a href="map-grid.html">Map Grid</a></li>
 											<li><a href="map-list.html">Map List</a></li>
-										</ul>
+										</ul>-->
 									</li>
 									<li><a href="search.html">Search Doctor</a></li>
 									<li><a href="doctor-profile.html">Doctor Profile</a></li>
