--- a/product-description.html
+++ b/product-description.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Doccure</title>
+		<title>Doctor Khojo</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 		
 		<!-- Favicons -->
@@ -58,7 +58,7 @@
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
-								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+								<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
 								<h2>Doctor Khojo</h2>
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
@@ -66,13 +66,13 @@
 							</a>
 						</div>
 						<ul class="main-nav">
-							<li>
+							<li class="ml-3">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-submenu">
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="doctor-dashboard.html">Doctor Dashboard</a></li>
+									<li><a href="doctors.html">Doctor</a></li>
 									<li><a href="appointments.html">Appointments</a></li>
 									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
@@ -168,7 +168,7 @@
 							</div>
 							<div class="header-contact-detail">
 								<p class="contact-header">Contact</p>
-								<p class="contact-info-header"> +1 315 369 5943</p>
+								<p class="contact-info-header"> +91 9955871746</p>
 							</div>
 						</li>
 						<li class="nav-item">
@@ -458,7 +458,7 @@
 							
 								<!-- Footer Widget -->
 								<div class="footer-widget footer-about">
-									<div class="footer-logo">
+									<div class="footer-logo khojo">
 										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
 										<h2>Doctor Khojo</h2>
 									</div>
