--- a/blog-list.html
+++ b/blog-list.html
@@ -500,8 +500,9 @@
 							
 								<!-- Footer Widget -->
 								<div class="footer-widget footer-about">
-									<div class="footer-logo">
-										<img src="assets/img/footer-logo.png" alt="logo">
+									<div class="footer-logo khojo">
+										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
+										<h1>Doctor Khojo</h1>
 									</div>
 									<div class="footer-about-content">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -572,18 +573,20 @@
 									<div class="footer-contact-info">
 										<div class="footer-address">
 											<span><i class="fas fa-map-marker-alt"></i></span>
-											<p> 3556  Beech Street, San Francisco,<br> California, CA 94108 </p>
+											<p> Baghdulhan Rd, Opposite Development of Mathematics, <br> Baghdulhan, Hajipur, Bihar 8441018 </p>
 										</div>
 										<p>
 											<i class="fas fa-phone-alt"></i>
-											+1 315 369 5943
+											+91 9955871746
 										</p>
 										<p class="mb-0">
 											<i class="fas fa-envelope"></i>
-											doccure@example.com
+											learn@khabaitech.com
 										</p>
 									</div>
 								</div>
+
+
 								<!-- /Footer Widget -->
 								
 							</div>
@@ -602,7 +605,9 @@
 							<div class="row">
 								<div class="col-md-6 col-lg-6">
 									<div class="copyright-text">
-										<p class="mb-0">&copy; 2020 Doccure. All rights reserved.</p>
+										<!--<p class="mb-0">&copy; 2020 Doccure. All rights reserved.</p>-->
+										<p class="mb-0">Copyright &copy; <script>document.write(new Date().getFullYear());</script> Designer by  <a href="http://khabaitech.com/" target="_blank" > Khabai Tech</a></p>
+
 									</div>
 								</div>
 								<div class="col-md-6 col-lg-6">
