--- a/blog-list.html
+++ b/blog-list.html
@@ -505,7 +505,7 @@
 										<h1>Doctor Khojo</h1>
 									</div>
 									<div class="footer-about-content">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+										<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->
 										<div class="social-icon">
 											<ul>
 												<li>
