--- a/blog-list.html
+++ b/blog-list.html
@@ -57,7 +57,7 @@
 							</a>
 						</div>
 						<ul class="main-nav">
-							<li class = "ml-3>
+							<li class = "ml-3">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-submenu">
