--- a/blog-list.html
+++ b/blog-list.html
@@ -616,10 +616,10 @@
 								
 									<!-- Copyright Menu -->
 									<div class="copyright-menu">
-										<ul class="policy-menu">
+										<!--<ul class="policy-menu">
 											<li><a href="term-condition.html">Terms and Conditions</a></li>
 											<li><a href="privacy-policy.html">Policy</a></li>
-										</ul>
+										</ul>-->
 									</div>
 									<!-- /Copyright Menu -->
 									
