--- a/blog-grid.html
+++ b/blog-grid.html
@@ -623,7 +623,7 @@
 								<div class="footer-widget footer-about">
 									<div class="footer-logo khojo">
 										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
-										<p>Doctor Khojo</p>
+										<h2>Doctor Khojo</h2>
 									</div>
 									<div class="footer-about-content">
 										<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->
