--- a/blog-list.html
+++ b/blog-list.html
@@ -111,13 +111,13 @@
 								</ul>
 							</li>
 							<li class="has-submenu">
-								<a href="">Pages <i class="fas fa-chevron-down"></i></a>
+								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="voice-call.html">Voice Call</a></li>
-									<li><a href="video-call.html">Video Call</a></li>
-									<li><a href="search.html">Search Doctors</a></li>
-									<li><a href="calendar.html">Calendar</a></li>
-									<li><a href="components.html">Components</a></li>
+									<li><a href="voice-call.html">Diagnostics</a></li>
+									<li><a href="video-call.html">Lab Search</a></li>
+									<li><a href="search.html">Lab Details</a></li>
+									<li><a href="calendar.html">Diagnostics List</a></li>
+									<!--<li><a href="components.html">Components</a></li>-->
 									<li class="has-submenu">
 										<a href="invoices.html">Invoices</a>
 										<ul class="submenu">
@@ -128,7 +128,7 @@
 									<li><a href="blank-page.html">Starter Page</a></li>
 									<li><a href="login.html">Login</a></li>
 									<li><a href="register.html">Register</a></li>
-									<li><a href="forgot-password.html">Forgot Password</a></li>
+									<!--<li><a href="forgot-password.html">Forgot Password</a></li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu active">
