--- a/blog-grid.html
+++ b/blog-grid.html
@@ -110,7 +110,7 @@
 									<li><a href="payment-success.html">Payment Success</a></li>
 								</ul>
 							</li>
-							<li class="has-submenu">
+							<!--<li class="has-submenu">
 								<a href="">Pages <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="voice-call.html">Voice Call</a></li>
@@ -129,6 +129,27 @@
 									<li><a href="login.html">Login</a></li>
 									<li><a href="register.html">Register</a></li>
 									<li><a href="forgot-password.html">Forgot Password</a></li>
+								</ul>
+							</li>-->
+							<li class="has-submenu">
+								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
+								<ul class="submenu">
+									<li><a href="voice-call.html">Diagnostics</a></li>
+									<li><a href="video-call.html">Lab Search</a></li>
+									<li><a href="search.html">Lab Details</a></li>
+									<li><a href="calendar.html">Diagnostics List</a></li>
+									<!--<li><a href="components.html">Components</a></li>-->
+									<li class="has-submenu">
+										<a href="invoices.html">Invoices</a>
+										<ul class="submenu">
+											<li><a href="invoices.html">Invoices</a></li>
+											<li><a href="invoice-view.html">Invoice View</a></li>
+										</ul>
+									</li>
+									<li><a href="blank-page.html">Starter Page</a></li>
+									<li><a href="login.html">Login</a></li>
+									<li><a href="register.html">Register</a></li>
+									<!--<li><a href="forgot-password.html">Forgot Password</a></li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu active">
