--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-		<title>Doctor Khojo</title>
+		<title>Doctor Khojo Online</title>
 		
 		<!-- Favicons -->
 		<link type="image/x-icon" href="assets/img/favicon.png" rel="icon">
@@ -111,8 +111,8 @@
 								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="pharmacy-index.html">Pharmacy</a></li>
-									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
+									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="product-all.html">Product</a></li>
 									<li><a href="product-description.html">Product Description</a></li>
 									<li><a href="cart.html">Cart</a></li>
@@ -124,9 +124,9 @@
 								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="dignostics-index.html">Diagnostics</a></li>
+									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<li><a href="lab-search.html">Lab Search</a></li>
 									<li><a href="lab-details.html">Lab Details</a></li>
-									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<!--<li><a href="calendar.html">Calendar</a></li>
 									<li><a href="components.html">Components</a></li>-->
 									<li class="has-submenu">
@@ -155,6 +155,8 @@
 								<ul class="submenu">
 									<li><a href="admin/index.html" target="_blank">Admin</a></li>
 									<li><a href="pharmacy/index.html" target="_blank">Pharmacy Admin</a></li>
+									<li><a href="diagnostic/index.html" target="_blank">Diagnostic Admin </a></li>
+									<li><a href="pa
 								</ul>
 							</li>
 							<li class="login-link">
