--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							<li class="has-submenu">
 								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="dignostics-index.html">Diagnostics</a></li>
+									<li><a href="diagnostics-index.html">Diagnostics</a></li>
 									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<li><a href="lab-search.html">Lab Search</a></li>
 									<li><a href="lab-details.html">Lab Details</a></li>
