--- a/doctors.html
+++ b/doctors.html
@@ -72,7 +72,7 @@
 							<li class="has-submenu active">
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li class="active" ><a href="doctor.html">Doctor </a></li>
+									<li class="active"><a href="doctor.html">Doctor </a></li>
 									<li><a href="appointments.html">Appointments</a></li>
 									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
@@ -118,8 +118,8 @@
 								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="pharmacy-index.html">Pharmacy</a></li>
-									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
+									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="product-all.html">Product</a></li>
 									<li><a href="product-description.html">Product Description</a></li>
 									<li><a href="cart.html">Cart</a></li>
@@ -130,10 +130,10 @@
 							<li class="has-submenu">
 								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="dignostics-index.html">Diagnostics</a></li>
-									<li><a href="lab-search.html">Lab Search</a></li>
+									<li><a href="diagnostics-index.html">Diagnostics</a></li>
+                                                                        <li><a href="diagnostics-all.html">Diagnostics List</a></li>	
+									 <li><a href="lab-search.html">Lab Search</a></li>
 									<li><a href="lab-details.html">Lab Details</a></li>
-									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<!--<li><a href="calendar.html">Calendar</a></li>
 									<li><a href="components.html">Components</a></li>-->
 									<li class="has-submenu">
