--- a/pharmacy-details.html
+++ b/pharmacy-details.html
@@ -115,8 +115,8 @@
 								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="pharmacy-index.html">Pharmacy</a></li>
+							        	<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
 									<li class="active"><a href="pharmacy-details.html">Pharmacy Details</a></li>
-									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
 									<li><a href="product-all.html">Product</a></li>
 									<li><a href="product-description.html">Product Description</a></li>
 									<li><a href="cart.html">Cart</a></li>
@@ -127,10 +127,10 @@
 							<li class="has-submenu">
 								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="dignostics-index.html">Diagnostics</a></li>
+									<li><a href="diagnostics-index.html">Diagnostics</a></li>
+                                                                     	<li><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<li><a href="lab-search.html">Lab Search</a></li>
 									<li><a href="lab-details.html">Lab Details</a></li>
-									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<!--<li><a href="calendar.html">Calendar</a></li>
 									<li><a href="components.html">Components</a></li>-->
 									<li class="has-submenu">
