--- a/blog-details.html
+++ b/blog-details.html
@@ -173,13 +173,15 @@
 								<ul class="submenu">
 									<li><a href="admin/index.html" target="_blank">Admin</a></li>
 									<li><a href="pharmacy/index.html" target="_blank">Pharmacy Admin</a></li>
+									<li><a href="diagnostic/index.html" target="_blank">Diagnostic Admin </a></li>
+									<li><a href="pa
 								</ul>
 							</li>
 							<li class="login-link">
 								<a href="login.html">Login / Signup</a>
 							</li>
-						</ul>
-					</div>		 
+						</ul>		 
+					</div>	 
 					<ul class="nav header-navbar-rht">
 						<li class="nav-item contact-item">
 							<div class="header-contact-img">
