--- a/blog-list.html
+++ b/blog-list.html
@@ -65,14 +65,14 @@
 								<ul class="submenu">
 									<li><a href="doctor-dashboard.html">Doctor Dashboard</a></li>
 									<li><a href="appointments.html">Appointments</a></li>
-									<li><a href="schedule-timings.html">Schedule Timing</a></li>
+									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
 									<li><a href="patient-profile.html">Patients Profile</a></li>
 									<li><a href="chat-doctor.html">Chat</a></li>
 									<li><a href="invoices.html">Invoices</a></li>
 									<li><a href="doctor-profile-settings.html">Profile Settings</a></li>
 									<li><a href="reviews.html">Reviews</a></li>
-									<li><a href="doctor-register.html">Doctor Register</a></li>
+									<li><a href="doctor-register.html">Doctor Register</a></li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu">
