--- a/doctor-register.html
+++ b/doctor-register.html
@@ -57,7 +57,7 @@
 							</a>
 						</div>
 						<ul class="main-nav">
-							<li>
+							<li class="ml-3">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-submenu active">
@@ -257,7 +257,7 @@
 										<h2>Doctor Khojo<h2>
 									</div>
 									<div class="footer-about-content">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+										<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->
 										<div class="social-icon">
 											<ul>
 												<li>
