--- a/diagnostics-index.html
+++ b/diagnostics-index.html
@@ -262,7 +262,7 @@
 						<div class="col-md-9 m-auto">
 							<div class="section-header text-center">
 								<h2>What are you looking for?</h2>
-								<!--<p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>-->
+								<!--<p class="sub-title">Hospital, an institution that is built, staffed, and equipped for the diagnosis of disease; for the treatment, both medical and surgical, of the sick and the injured; and for their housing during this process.</p>-->
 							</div>
 							<div class="row">
 								<div class="col-lg-4 mb-3">
@@ -410,10 +410,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Ruby Perrin</a> 
+											<a href="doctor-profile.html">Ashma Praveen</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MDS - Periodontology and Oral Implantology, BDS</p>
+										<p class="speciality">Gayeni</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -424,7 +424,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Florida, USA
+												<i class="fas fa-map-marker-alt"></i> Hajipur,Bihar
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -458,10 +458,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Darren Elder</a> 
+											<a href="doctor-profile.html">Dr.Ravi Prakash</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">BDS, MDS - Oral & Maxillofacial Surgery</p>
+										<p class="speciality">Anaesthetic</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -472,7 +472,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Newyork, USA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, Bihar
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -506,10 +506,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Deborah Angel</a> 
+											<a href="doctor-profile.html">Dr.Dya Shankar</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MD - General Medicine, DNB - Cardiology</p>
+										<p class="speciality">Dentist</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -520,7 +520,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Georgia, USA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, Bihar
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -554,10 +554,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Sofia Brient</a> 
+											<a href="doctor-profile.html">Dr.Pallavi Kumari</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MS - General Surgery, MCh - Urology</p>
+										<p class="speciality">Gayeni</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -568,7 +568,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Louisiana, USA
+												<i class="fas fa-map-marker-alt"></i>Hajipur,Bihar
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -602,10 +602,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Marvin Campbell</a> 
+											<a href="doctor-profile.html">Dr.O.P Chauhan</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MD - Ophthalmology, DNB - Ophthalmology</p>
+										<p class="speciality">Skin</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -616,7 +616,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Michigan, USA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, Bihar
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -650,10 +650,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Katharine Berthold</a> 
+											<a href="doctor-profile.html"></a> Dr.G.M Sinha
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MS - Orthopaedics, MBBS, M.Ch - Orthopaedics</p>
+										<p class="speciality">Eye</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -664,7 +664,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Texas, USA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, Bihar
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -698,10 +698,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Linda Tobin</a> 
+											<a href="doctor-profile.html">Dr.N.K Singh</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MD - General Medicine, DM - Neurology</p>
+										<p class="speciality">Ortho</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -712,7 +712,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Kansas, USA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, Bihar
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -746,10 +746,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Paul Richard</a> 
+											<a href="doctor-profile.html">Dr.Sanjiv Kumar</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MD - Dermatology , Venereology & Lepros</p>
+										<p class="speciality">Pathology</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -760,7 +760,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> California, USA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, Bihar
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
