--- a/lab-search.html
+++ b/lab-search.html
@@ -516,15 +516,15 @@
 									<div class="footer-contact-info">
 										<div class="footer-address">
 											<span><i class="fas fa-map-marker-alt"></i></span>
-											<p> 3556  Beech Street, San Francisco,<br> California, CA 94108 </p>
+											<p> Bagdulhan Rd, Opposite Development of Mathematics,<br>Baghdulhan,Hajipur,Bihar,<br>844101</p>
 										</div>
 										<p>
 											<i class="fas fa-phone-alt"></i>
-											+1 315 369 5943
+											+91 9955871746
 										</p>
 										<p class="mb-0">
 											<i class="fas fa-envelope"></i>
-											doccure@example.com
+											learn@khabaitech.com
 										</p>
 									</div>
 								</div>
