--- a/lab-details.html
+++ b/lab-details.html
@@ -783,7 +783,7 @@ I can't forget how many efforts made by Dr.Pallavi every morning and evening she
 										<img src="assets/img/footer-logo.png" alt="logo">
 									</div>
 									<div class="footer-about-content">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+										<p>A medical laboratory or clinical laboratory is a laboratory where tests are done on clinical specimens in order to get information about the health of a patient as pertaining to the diagnosis, treatment, and prevention of disease. </p>
 										<div class="social-icon">
 											<ul>
 												<li>
