--- a/lab-details.html
+++ b/lab-details.html
@@ -211,7 +211,7 @@
 										</a>
 									</div>
 									<div class="doc-info-cont">
-										<h4 class="doc-name mb-2"><a href="pharmacy-details.html">Medlife Medical</a></h4>
+										<h4 class="doc-name mb-2"><a href="pharmacy-details.html">Hospital of Hajipur</a></h4>
 										<div class="rating mb-2">
 											<span class="badge badge-primary">4.0</span>
 											<i class="fas fa-star filled"></i>
