--- a/diagnostics-all.html
+++ b/diagnostics-all.html
@@ -64,16 +64,16 @@
 								<i class="fas fa-times"></i>
 							</a>
 						</div>
-						<ul class="main-nav">
-							<li>
+						   <ul class="main-nav">
+							<li class="ml-3">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-submenu">
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="doctor-dashboard.html">Doctor Dashboard</a></li>
+									<li><a href="doctors.html">Doctor </a></li>
 									<li><a href="appointments.html">Appointments</a></li>
-									<li><a href="schedule-timings.html">Schedule Timing</a></li>
+									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
 									<li><a href="patient-profile.html">Patients Profile</a></li>
 									<li><a href="chat-doctor.html">Chat</a></li>
@@ -81,17 +81,25 @@
 									<li><a href="doctor-profile-settings.html">Profile Settings</a></li>
 									<li><a href="reviews.html">Reviews</a></li>
 									<li><a href="doctor-register.html">Doctor Register</a></li>
+									<li class="has-submenu">
+										<a href="doctor-blog.html">Blog</a>
+										<ul class="submenu">
+											<li><a href="doctor-blog.html">Blog</a></li>
+											<li><a href="blog-details.html">Blog view</a></li>
+											<li><a href="doctor-add-blog.html">Add Blog</a></li>
+										</ul>
+									</li>-->
 								</ul>
-							</li>
+							</li>	
 							<li class="has-submenu">
 								<a href="">Patients <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li class="has-submenu">
-										<a href="#">Doctors</a>
-										<ul class="submenu">
+										<!--<a href="#">Doctors</a>
+										 <ul class="submenu">
 											<li><a href="map-grid.html">Map Grid</a></li>
 											<li><a href="map-list.html">Map List</a></li>
-										</ul>
+										</ul>-->
 									</li>
 									<li><a href="search.html">Search Doctor</a></li>
 									<li><a href="doctor-profile.html">Doctor Profile</a></li>
@@ -100,31 +108,31 @@
 									<li><a href="booking-success.html">Booking Success</a></li>
 									<li><a href="patient-dashboard.html">Patient Dashboard</a></li>
 									<li><a href="favourites.html">Favourites</a></li>
-									<li><a href="chat.html">Chat</a></li>
+									<!--<li><a href="chat.html">Chat</a></li>
 									<li><a href="profile-settings.html">Profile Settings</a></li>
-									<li><a href="change-password.html">Change Password</a></li>
-								</ul>
-							</li>
-							<li class="has-submenu active">
-								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
-								<ul class="submenu">
-									<li><a href="pharmacy-index.html">Pharmacy</a></li>
-									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
-									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
-									<li class="active"><a href="product-all.html">Product</a></li>
-									<li><a href="product-description.html">Product Description</a></li>
-									<li><a href="cart.html">Cart</a></li>
-									<li><a href="product-checkout.html">Product Checkout</a></li>
-									<li><a href="payment-success.html">Payment Success</a></li>
+									<li><a href="change-password.html">Change Password</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu">
-								<a href="">Pages <i class="fas fa-chevron-down"></i></a>
+								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="dignostics-index.html">Diagnostics</a></li>
+									<li><a href="pharmacy-index.html">Pharmacy</a></li>
+									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
+									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
+									<li><a href="product-all.html">Product</a></li>
+									<li><a href="product-description.html">Product Description</a></li>
+									<li><a href="cart.html">Cart</a></li>
+									<li><a href="product-checkout.html">Product Checkout</a></li>
+									<!--<li><a href="payment-success.html">Payment Success</a></li>-->
+								</ul>
+							</li>
+							<li class="has-submenu active">
+								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
+								<ul class="submenu">
+									<li><a href="diagnostics-index.html">Diagnostics</a></li>
+									<li class="active"><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<li><a href="lab-search.html">Lab Search</a></li>
 									<li><a href="lab-details.html">Lab Details</a></li>
-									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<!--<li><a href="calendar.html">Calendar</a></li>
 									<li><a href="components.html">Components</a></li>-->
 									<li class="has-submenu">
@@ -137,6 +145,7 @@
 									<!--<li><a href="blank-page.html">Starter Page</a></li>-->
 									<li><a href="login.html">Login</a></li>
 									<li><a href="register.html">Register</a></li>
+									<!--<li><a href="forgot-password.html">Forgot Password</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu">
@@ -158,6 +167,7 @@
 								<a href="login.html">Login / Signup</a>
 							</li>
 						</ul>		 
+		 
 					</div>		 
 					<ul class="nav header-navbar-rht">
 						<li class="nav-item contact-item">
