--- a/lab-details.html
+++ b/lab-details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Doccure</title>
+		<title>Doctor Khojo</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 		
 		<!-- Favicons -->
@@ -34,7 +34,7 @@
 		<div class="main-wrapper">
 		
 			<!-- Header -->
-			<header class="header">
+			      <header class="header">
 				<nav class="navbar navbar-expand-lg header-nav">
 					<div class="navbar-header">
 						<a id="mobile_btn" href="javascript:void(0);">
@@ -45,28 +45,30 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+							<h2>Doctor Khojo</h2>
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
-								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+								<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+								<h2>Doctor Khojo</h2>
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
 								<i class="fas fa-times"></i>
 							</a>
 						</div>
-						<ul class="main-nav">
-							<li>
+						   <ul class="main-nav">
+							<li class="ml-3">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-submenu">
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="doctor-dashboard.html">Doctor Dashboard</a></li>
+									<li><a href="doctors.html">Doctor </a></li>
 									<li><a href="appointments.html">Appointments</a></li>
-									<li><a href="schedule-timings.html">Schedule Timing</a></li>
+									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
 									<li><a href="patient-profile.html">Patients Profile</a></li>
 									<li><a href="chat-doctor.html">Chat</a></li>
@@ -81,18 +83,18 @@
 											<li><a href="blog-details.html">Blog view</a></li>
 											<li><a href="doctor-add-blog.html">Add Blog</a></li>
 										</ul>
-									</li>
+									</li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu">
 								<a href="">Patients <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li class="has-submenu">
-										<a href="#">Doctors</a>
-										<ul class="submenu">
+										<!--<a href="#">Doctors</a>
+										 <ul class="submenu">
 											<li><a href="map-grid.html">Map Grid</a></li>
 											<li><a href="map-list.html">Map List</a></li>
-										</ul>
+										</ul>-->
 									</li>
 									<li><a href="search.html">Search Doctor</a></li>
 									<li><a href="doctor-profile.html">Doctor Profile</a></li>
@@ -101,32 +103,33 @@
 									<li><a href="booking-success.html">Booking Success</a></li>
 									<li><a href="patient-dashboard.html">Patient Dashboard</a></li>
 									<li><a href="favourites.html">Favourites</a></li>
-									<li><a href="chat.html">Chat</a></li>
+									<!--<li><a href="chat.html">Chat</a></li>
 									<li><a href="profile-settings.html">Profile Settings</a></li>
-									<li><a href="change-password.html">Change Password</a></li>
+									<li><a href="change-password.html">Change Password</a></li>-->
 								</ul>
 							</li>
-							<li class="has-submenu active">
+							<li class="has-submenu">
 								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="pharmacy-index.html">Pharmacy</a></li>
-									<li class="active"><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
+									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="product-all.html">Product</a></li>
 									<li><a href="product-description.html">Product Description</a></li>
 									<li><a href="cart.html">Cart</a></li>
 									<li><a href="product-checkout.html">Product Checkout</a></li>
-									<li><a href="payment-success.html">Payment Success</a></li>
+									<!--<li><a href="payment-success.html">Payment Success</a></li>-->
 								</ul>
 							</li>
-							<li class="has-submenu">
-								<a href="">Pages <i class="fas fa-chevron-down"></i></a>
+							<li class="has-submenu active">
+								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="voice-call.html">Voice Call</a></li>
-									<li><a href="video-call.html">Video Call</a></li>
-									<li><a href="search.html">Search Doctors</a></li>
-									<li><a href="calendar.html">Calendar</a></li>
-									<li><a href="components.html">Components</a></li>
+									<li><a href="diagnostics-index.html">Diagnostics</a></li>
+									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
+									<li><a href="lab-search.html">Lab Search</a></li>
+									<li class="active"><a href="lab-details.html">Lab Details</a></li>
+									<!--<li><a href="calendar.html">Calendar</a></li>
+									<li><a href="components.html">Components</a></li>-->
 									<li class="has-submenu">
 										<a href="invoices.html">Invoices</a>
 										<ul class="submenu">
@@ -134,10 +137,10 @@
 											<li><a href="invoice-view.html">Invoice View</a></li>
 										</ul>
 									</li>
-									<li><a href="blank-page.html">Starter Page</a></li>
+									<!--<li><a href="blank-page.html">Starter Page</a></li>-->
 									<li><a href="login.html">Login</a></li>
 									<li><a href="register.html">Register</a></li>
-									<li><a href="forgot-password.html">Forgot Password</a></li>
+									<!--<li><a href="forgot-password.html">Forgot Password</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu">
@@ -159,6 +162,7 @@
 								<a href="login.html">Login / Signup</a>
 							</li>
 						</ul>		 
+		 
 					</div>		 
 					<ul class="nav header-navbar-rht">
 						<li class="nav-item contact-item">
@@ -167,7 +171,7 @@
 							</div>
 							<div class="header-contact-detail">
 								<p class="contact-header">Contact</p>
-								<p class="contact-info-header"> +91 9955871746</p>
+								<p class="contact-info-header"> +919955871746</p>
 							</div>
 						</li>
 						<li class="nav-item">
@@ -176,6 +180,7 @@
 					</ul>
 				</nav>
 			</header>
+
 			<!-- /Header -->
 			
 			<!-- Breadcrumb -->
@@ -780,10 +785,12 @@ I can't forget how many efforts made by Dr.Pallavi every morning and evening she
 								<!-- Footer Widget -->
 								<div class="footer-widget footer-about">
 									<div class="footer-logo">
-										<img src="assets/img/footer-logo.png" alt="logo">
+										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
+										<h2>Doctor Khojo</h2>
 									</div>
 									<div class="footer-about-content">
-										<p>A medical laboratory or clinical laboratory is a laboratory where tests are done on clinical specimens in order to get information about the health of a patient as pertaining to the diagnosis, treatment, and prevention of disease. </p>
+										<!--<p>A medical laboratory or clinical laboratory is a laboratory where tests are done on clinical specimens in order to get information about the health of 
+                                                                                 a patient as pertaining to the diagnosis, treatment, and prevention of disease.</p>-->
 										<div class="social-icon">
 											<ul>
 												<li>
@@ -853,14 +860,15 @@ I can't forget how many efforts made by Dr.Pallavi every morning and evening she
 											<span><i class="fas fa-map-marker-alt"></i></span>
 											<p>Baghdulhan Rd,Oposite Development of Mthematics<br>Baghdulhan ,Hajipur,Bihar,844101</p>
 										</div>
-										<p>
+																				<p>
 											<i class="fas fa-phone-alt"></i>
-											<a href="tel:9955871746">+91 9955871746</a>
+											+91 9955871746
 										</p>
 										<p class="mb-0">
 											<i class="fas fa-envelope"></i>
-											<a href="/cdn-cgi/l/email-protection#8bf8fceaffe2f9eaf2babde3e1fbcbece6eae2e7a5e8e4e6b4d8fee9e1eee8ffb6c3eee7e7e4aeb9bbeaeceae2e5" target="_top">learn@khabaitech.com</a>
+											learn@khabaitech.com
 										</p>
+
 									</div>
 								</div>
 								<!-- /Footer Widget -->
@@ -881,17 +889,19 @@ I can't forget how many efforts made by Dr.Pallavi every morning and evening she
 							<div class="row">
 								<div class="col-md-6 col-lg-6">
 									<div class="copyright-text">
-										<p class="mb-0">&copy; 2020 Doccure. All rights reserved.</p>
+										<!--<p class="mb-0">&copy; 2020 Doccure. All rights reserved.</p>-->
+										<p class="mb-0">Copyright &copy; <script>document.write(new Date().getFullYear());</script> Designer by <a href="http://khabaitech.com/" target="_blank" > Khabai Tech</a>.</p>
+
 									</div>
 								</div>
 								<div class="col-md-6 col-lg-6">
 								
 									<!-- Copyright Menu -->
 									<div class="copyright-menu">
-										<ul class="policy-menu">
+										<!--<ul class="policy-menu">
 											<li><a href="term-condition.html">Terms and Conditions</a></li>
 											<li><a href="privacy-policy.html">Policy</a></li>
-										</ul>
+										</ul>-->
 									</div>
 									<!-- /Copyright Menu -->
 									
