--- a/lab-details.html
+++ b/lab-details.html
@@ -784,7 +784,7 @@ I can't forget how many efforts made by Dr.Pallavi every morning and evening she
 							
 								<!-- Footer Widget -->
 								<div class="footer-widget footer-about">
-									<div class="footer-logo">
+									<div class="footer-logo khojo">
 										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
 										<h2>Doctor Khojo</h2>
 									</div>
