--- a/pharmacy-search.html
+++ b/pharmacy-search.html
@@ -198,7 +198,7 @@
 									<li class="breadcrumb-item active" aria-current="page">Search</li>
 								</ol>
 							</nav>
-							<h2 class="breadcrumb-title">2245 matches found for : Pharmacy In United States</h2>
+							<h2 class="breadcrumb-title">1025 matches found for : Pharmacy In Bihar</h2>
 						</div>
 						<div class="col-md-4 col-12 d-md-block d-none">
 							<div class="sort-by">
@@ -298,7 +298,8 @@
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name mb-2"><a href="pharmacy-details.html">Medlife Medical</a></h4>
+												<h4 class="doc-name mb-2"><a href="pharmacy-details.html">
+New Sarvottam Medico(HEART CARE CENTRE)</a></h4>
 												<div class="rating mb-2">
 													<span class="badge badge-primary">4.0</span>
 													<i class="fas fa-star filled"></i>
@@ -311,9 +312,9 @@
 												<div class="clinic-details">
 													<div class="clini-infos pt-3">
 												
-													<p class="doc-location mb-2"><i class="fas fa-phone-volume mr-1"></i> 320-795-8815</p>
-													<p class="doc-location mb-2 text-ellipse"><i class="fas fa-map-marker-alt mr-1"></i> 96 Red Hawk Road Cyrus, MN 56323 </p>
-													<p class="doc-location mb-2"><i class="fas fa-chevron-right mr-1"></i> Chemists, Surgical Equipment Dealer</p>
+													<p class="doc-location mb-2"><i class="fas fa-phone-volume mr-1"></i> +91 9431091322</p>
+													<p class="doc-location mb-2 text-ellipse"><i class="fas fa-map-marker-alt mr-1"></i> C/O - Awadhesh Jee, Jauhari Bazar, Hajipur, Hajipur - 844101, Dr. Niraj Sinha (Map) </p>
+													<p class="doc-location mb-2"><i class="fas fa-chevron-right mr-1"></i> Chemists</p>
 													
 													<p class="doc-location mb-2"><i class="fas fa-chevron-right mr-1"></i> Opens at 08.00 AM</p>
 	
